feat(web): allow temporary per-request OpenRouter API key via UI; pass through backend; bind 0.0.0.0 for Railway; docs update

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,10 @@
       <section class="card">
         <form id="genForm">
           <div class="row">
+            <label for="apiKey">Temporary OpenRouter API key (not stored)</label>
+            <input type="password" id="apiKey" name="apiKey" placeholder="sk-or-v1-..." autocomplete="off" />
+          </div>
+          <div class="row">
             <label for="name">Output base name</label>
             <input type="text" id="name" name="name" placeholder="e.g., custom_scene" />
           </div>
