feat(api): enhance API key validation to allow temporary keys from requests

--- a/visual-assets-package/bloodbound-visual-gallery.html
+++ b/visual-assets-package/bloodbound-visual-gallery.html
@@ -247,7 +247,7 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item" onclick="openModal('/mnt/user-data/uploads/01_elara_nightshade_portrait.png')">
-                    <img src="/mnt/user-data/uploads/01_elara_nightshade_portrait.png" alt="Elara Nightshade">
+                    <img src="https://xierykaufosmdkcxzfex.supabase.co/storage/v1/object/public/image-gen/01_elara_nightshade_portrait.png" alt="Elara Nightshade">
                     <div class="gallery-item-title">Elara Nightshade - The Half-Blood Assassin</div>
                 </div>
                 
