Add complete visual gallery for Bloodbound Assassin with character portraits, key locations, epic scenes, and marketing assets

--- a/web/index.html
+++ b/web/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
     <header>
-      <h1>Blood Assassin - Image Generator</h1>
+      <h1>NanoBanana Simple - Image Generator</h1>
       <p>Type or upload a prompt file, generate, preview, and download images.</p>
     </header>
 
     <main>
+      <section class="card" style="border-left: 4px solid #8b0000;">
+        <h2>Explore the Visual Gallery</h2>
+        <p>Browse portraits, locations, and epic scenes from the Bloodbound universe.</p>
+        <p><a href="/gallery.html" style="color:#d4af37; text-decoration:underline;">Open Gallery</a></p>
+      </section>
+
       <section class="card">
         <form id="genForm">
           <div class="row">
