Refactor code structure for improved readability and maintainability

--- a/web/index.html
+++ b/web/index.html
@@ -63,6 +63,12 @@
           <p>Access all one-off HTML experiments (interactive gallery, tools, and source variants).</p>
           <a class="cta" href="/experiments/">Browse Experiments</a>
         </article>
+
+        <article class="card" style="border-left: 4px solid #8b0000;">
+          <h3>Interactive Character Gallery</h3>
+          <p>Tabbed view of characters, locations, and key scenes from the universe.</p>
+          <a class="cta" href="/experiments/phase-4-interactive-gallery.html">Open Gallery</a>
+        </article>
       </section>
     </main>
 
