--- a/web/experiments/phase-4-interactive-gallery.html
+++ b/web/experiments/phase-4-interactive-gallery.html
@@ -23,7 +23,7 @@
     </header>
     <main style="max-width: 1200px; margin: 0 auto; padding: 1rem;">
       <div class="frame-wrap">
-        <iframe src="/experiments-src/phase-4-html-gallery/Blood%20Assassin%20-%20Interactive%20Character%20Gallery.html" title="Phase 4 Interactive Gallery"></iframe>
+        <iframe src="/experiments-src/phase-4-html-gallery/interactive-character-gallery.html" title="Phase 4 Interactive Gallery"></iframe>
       </div>
     </main>
   </body>
