--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         <a href="/gallery.html">Gallery</a>
         <a href="/generator.html">Image Generator</a>
         <a href="/theme-preview.html">Theme Preview</a>
-        <a href="/experiments/">Experiments</a>
+  <a href="/experiments/index.html">Experiments</a>
       </nav>
     </header>
 
@@ -61,7 +61,7 @@
         <article class="card" style="border-left: 4px solid #8b0000;">
           <h3>Experiments</h3>
           <p>Access all one-off HTML experiments (interactive gallery, tools, and source variants).</p>
-          <a class="cta" href="/experiments/">Browse Experiments</a>
+          <a class="cta" href="/experiments/index.html">Browse Experiments</a>
         </article>
 
         <article class="card" style="border-left: 4px solid #8b0000;">
