--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <title>Bloodbound Assassin — Showcase</title>
+     <title>Bloodbound Assassin — FFA Sunday Small Group Showcase</title>
     <link rel="stylesheet" href="/styles.css" />
     <style>
       .hero { text-align: center; padding: 2.5rem 1rem 1.5rem; }
@@ -73,7 +73,7 @@
     </main>
 
     <footer>
-      <small>© Bloodbound Assassin — classroom exercise</small>
+      <small>© Bloodbound Assassin — FFA Small Group Exercise</small>
     </footer>
   </body>
   </html>
