--- a/web/experiments/va-gallery-source.html
+++ b/web/experiments/va-gallery-source.html
@@ -19,7 +19,10 @@
       <h1>Original Visual Gallery Variants</h1>
       <nav class="top-nav">
         <a href="/">Home</a>
-        <a href="/experiments/">All Experiments</a>
+        <a href="/gallery.html">Gallery</a>
+        <a href="/generator.html">Generator</a>
+        <a href="/theme-preview.html">Theme</a>
+        <a href="/experiments/">Experiments</a>
       </nav>
     </header>
     <main style="max-width: 1200px; margin: 0 auto; padding: 1rem;">
